# smart

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  main.c  make.sh
.deps/: main.Po
app/: Makefile  Makefile.am  main.c
app/.deps/: main.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
src/app/: main.c  readelf.txt
